--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,14 @@
 asgiref==3.4.1
+autopep8==1.5.7
 Django==3.2.5
+django-appconf==1.0.4
+django-imagekit==4.0.2
+pilkit==2.0
+Pillow==8.3.1
 psycopg2==2.9.1
+pycodestyle==2.7.0
 python-dotenv==0.18.0
 pytz==2021.1
+six==1.16.0
 sqlparse==0.4.1
+toml==0.10.2
