--- a/.localenv.example
+++ b/.localenv.example
@@ -5,3 +5,11 @@ DATABASE_USER =
 DATABASE_PASSWORD = 
 DATABASE_HOST = 
 DATABASE_PORT = 
+ALLOWED_HOSTS = 
+SESSION_COOKIE_SECURE =
+CSRF_COOKIE_SECURE =
+SECURE_SSL_REDIRECT =
+SECURE_REFERER_POLICY =
+SECURE_HSTS_SECONDS =
+SECURE_HSTS_PRELOAD =
+SECURE_HSTS_INCLUDE_SUBDOMAINS =
