--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,26 @@
 asgiref==3.4.1
 autopep8==1.5.7
+beautifulsoup4==4.9.3
+certifi==2021.5.30
+charset-normalizer==2.0.4
 Django==3.2.5
 django-appconf==1.0.4
+django-ckeditor==6.1.0
+django-cors-headers==3.7.0
+django-filter==2.4.0
 django-imagekit==4.0.2
+django-js-asset==1.2.2
+djangorestframework==3.12.4
+idna==3.2
 pilkit==2.0
 Pillow==8.3.1
 psycopg2==2.9.1
 pycodestyle==2.7.0
 python-dotenv==0.18.0
 pytz==2021.1
+requests==2.26.0
 six==1.16.0
+soupsieve==2.2.1
 sqlparse==0.4.1
 toml==0.10.2
+urllib3==1.26.6
